Release CALI specification and reference implementation v2.0
